--- a/styles/landing.css
+++ b/styles/landing.css
@@ -35,12 +35,12 @@ body.landing{
     padding: 2rem;
     text-align: center;
     opacity: 0;
-    -webkit-transform: scaleX(0.9) translateY(3rem);
-    -moz-transform: scaleX(0.9) translateY(3rem);
-    transform: scaleX(0.9) translateY(3rem);
-    -webkit-transition: all 0.25s ease-in-out;
-    -moz-transition: all 0.25s ease-in-out;
-    transition: all 0.25s ease-in-out;
+    -webkit-transform: scaleX(0.9) translateY(3rem) rotate(200deg);
+    -moz-transform: scaleX(0.9) translateY(3rem) rotate(200deg);
+    transform: scaleX(0.9) translateY(3rem) rotate(200deg);
+    -webkit-transition: all 0.75s ease-in-out;
+    -moz-transition: all 0.75s ease-in-out;
+    transition: all 0.75s ease-in-out;
     -webkit-transition-delay: 0.2s;
     -moz-transition-delay: 0.2s;
     transition-delay: 0.2s;
