--- a/styles/player_bar.css
+++ b/styles/player_bar.css
@@ -102,7 +102,7 @@
 
 .seek-bar .fill {
     background: white;
-    width: 36%;
+    width: 0%;
     height: 0.25rem;
     border-radius: 2px;
 }
@@ -112,15 +112,24 @@
     height: 0.5rem;
     width: 0.5rem;
     background: white;
-    left: 36%;
+    left: 0%;
     top: 50%;
     margin-left: -0.25rem;
     margin-top:-0.25rem;
     border-radius: 50%;
     cursor: pointer;
-    -webkit-transition: all 100ms ease-in-out;
-    -moz-transition: all 100ms ease-in-out;
-    transition: all 100ms ease-in-out;
+    -webkit-transition: width 100ms ease-in-out,
+                        height 100ms ease-in-out,
+                        margin-top 100ms ease-in-out,
+                        margin-left 100ms ease-in-out;
+    -moz-transition: width 100ms ease-in-out,
+                    height 100ms ease-in-out,
+                    margin-top 100ms ease-in-out,
+                    margin-left 100ms ease-in-out;
+    transition: width 100ms ease-in-out,
+                height 100ms ease-in-out,
+                margin-top 100ms ease-in-out,
+                margin-left 100ms ease-in-out;
 }
 
 .seek-bar:hover .thumb {
